--- a/etc/_팀교육/StrToolkit/2024년 중간발표/Element Design/parse_frameResult.ipynb
+++ b/etc/_팀교육/StrToolkit/2024년 중간발표/Element Design/parse_frameResult.ipynb
@@ -2,7 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "################Module For Functional Programing#########################\n",
+    "from functools import reduce; from itertools import chain\n",
+    "from itertools import groupby; import operator\n",
+    "from copy import deepcopy\n",
+    "curry = lambda f: lambda a,*args: f(a, *args) if (len(args)) else lambda *args: f(a, *args)\n",
+    "\n",
+    "filter, map, reduce = curry(filter), curry(map), curry(reduce)\n",
+    "\n",
+    "go = lambda *args: reduce(lambda a,f: f(a), args) ## 함수도 축약 가능 ##\n",
+    "\n",
+    "def dictUpdate(dic1,dic2):\n",
+    "    dic1.update(dic2)\n",
+    "    return dic1\n",
+    "    \n",
+    "def dictsMerge(dics):\n",
+    "    res = reduce(dictUpdate, dics)\n",
+    "    return res\n",
+    "    \n",
+    "def dictDeleteKeys(dic, keys):\n",
+    "    for k in keys:\n",
+    "        del dic[k]\n",
+    "    return dic\n",
+    "\n",
+    "def flat(a):\n",
+    "    if isinstance(a, list):\n",
+    "        for i in a: \n",
+    "            yield from flat(i)\n",
+    "    else: yield a\n",
+    "\n",
+    "def grpBy(iter, key):\n",
+    "    f,keys,grps = key,[],[]\n",
+    "    sorted_ = sorted(iter, key=f)\n",
+    "    for key, grp_data in groupby(sorted_,key=f):\n",
+    "        keys.append(key); grps.append(list(grp_data))\n",
+    "    return grps,keys\n",
+    "#########################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\mk\\\\mQ\\\\etc\\\\_팀교육\\\\StrToolkit\\\\2024년 중간발표\\\\Element Design\\\\HSD_frame_module_IO\\\\HSD_frame_result_json 1.txt'"
+       "'c:\\\\MK\\\\mQ\\\\etc\\\\_팀교육\\\\StrToolkit\\\\2024년 중간발표\\\\Element Design\\\\HSD_frame_module_IO\\\\HSD_frame_result_json 1.txt'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +546,7 @@
        "    'unbr_segment': 1}}}}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,16 +571,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['2000000', '2000001', '2000002', '2000100', '2000101', '2000102', '2000200', '2000201', '2000202', '3000001', '3000002', '3000003', '3000101', '3000102', '3000104'])"
+       "{'name': 'ddd', 'd': 1}"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = {\"name\": \"ddd\"}\n",
+    "\n",
+    "x.update({\"d\": 1})\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2000000',\n",
+       " '2000001',\n",
+       " '2000002',\n",
+       " '2000100',\n",
+       " '2000101',\n",
+       " '2000102',\n",
+       " '2000200',\n",
+       " '2000201',\n",
+       " '2000202',\n",
+       " '3000001',\n",
+       " '3000002',\n",
+       " '3000003',\n",
+       " '3000101',\n",
+       " '3000102',\n",
+       " '3000104']"
+      ]
+     },
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,8 +635,13 @@
     "        nodeDict = res[\"node\"]\n",
     "        elemDict = res[\"element\"]\n",
     "        elemDictName = elemDict.keys()\n",
-    "        # newElemDict = \n",
-    "        return elemDictName\n",
+    "        newElemDict = go(\n",
+    "            elemDict.items(),#list,\n",
+    "            map(lambda d: d[0]),\n",
+    "            # map(lambda d: d[1]),\n",
+    "            list,\n",
+    "        )\n",
+    "        return newElemDict\n",
     "    \n",
     "    \n",
     "    return set_elemDictsPerFrame(resultforAllFrame[0])\n",
@@ -565,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +674,7 @@
        " [138517306.64939785, 220659094738.37088, 0, 0, 312551933.13417643]]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,9 +1240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (693433819.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[19], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    elementType = elemDict[]\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def Calculate_Element_Capacity(elemDict):\n",
     "    elementType = elemDict[]"
@@ -1179,7 +1274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
